--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-asgiref==3.4.1
-Django==3.2.7
+Django~=3.2.7
+dj-database-url==0.5.0
 gunicorn==20.1.0
-pytz==2021.1
-sqlparse==0.4.1
+psycopg2==2.9.1
 whitenoise==5.3.0
